--- a/art.html
+++ b/art.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="./art.css">
+    <link rel="stylesheet" type="text/css" href="art.css">
 </head>
 <body>
     <div class="robot-container">
